--- a/src/components/stackHolder/stackHolder.scss
+++ b/src/components/stackHolder/stackHolder.scss
@@ -23,7 +23,7 @@
 .stack-holder__tech-holder__img {
     max-width: 120px;
     margin: 10px;
-    z-index: -1;
+    z-index: 0;
     filter: grayscale(1);
 }
 
